cambio de nombre

--- a/ucv-mad-js-main/index.html
+++ b/ucv-mad-js-main/index.html
@@ -35,7 +35,7 @@
     </main>
 
     <footer>
-        <h2>Autor: Lucía González corason </h2>
+        <h2>Autor: Lucía González </h2>
     </footer>
 
 </body>
