--- a/ucv-mad-js-main/index.html
+++ b/ucv-mad-js-main/index.html
@@ -50,7 +50,7 @@
     </main>
 
     <footer>
-        <h2>Autor: Lucía González cpekrg,m ñlmjkrle </h2>
+        <h2>Autor: Lucía González </h2>
     </footer>
 
 </body>
